--- a/pages/skilled/skilled.wxml
+++ b/pages/skilled/skilled.wxml
@@ -1,38 +1,52 @@
 <view class="container">
-  <view class="section">
-    <view class="visaLabel">签证打分</view>
-    <picker bindchange="bindvisaPickerChange" value="{{index}}" range="{{visaType}}" class="picker">
-        <view class="picker">
-            <view class="pickerlabel">当前选择签证类型</view>
-            <view class="picker">：{{visaType[index]}}</view>
-        </view>
-    </picker>
+    <view class="section">
+        <view class="visaLabel">签证打分</view>
+        <picker bindchange="bindvisaPickerChange" value="{{index}}" range="{{visaType}}" class="picker">
+            <view class="picker">
+                <view class="pickerlabel">当前选择签证类型</view>
+                <view class="picker">：{{visaType[index]}}</view>
+            </view>
+        </picker>
         <view class="sliderView">
             <view class="pickerlabel">年龄</view>
             <view class="sliderValue">
-            <slider class = "sliderbar" bindchange="slider1change" left-icon="cancel" right-icon="success_no_circle" show-value  step="1"  min="18" max="45"/>
+                <slider class="sliderbar" bindchange="slider1change" left-icon="cancel" right-icon="success_no_circle" show-value step="1" min="18" max="45" />
             </view>
         </view>
         <view class="sliderView">
             <view class="pickerlabel">雅思</view>
-            <view class="sliderValue"><slider bindchange="slider1change" left-icon="cancel" right-icon="success_no_circle" show-value  step="1"  min="6" max="8"/></view>
+            <view class="sliderValue">
+                <slider bindchange="slider1change" left-icon="cancel" right-icon="success_no_circle" show-value step="1" min="6" max="8" />
+            </view>
         </view>
         <view class="sliderView">
             <view class="pickerlabel">境外工龄</view>
-            <view class="sliderValue"><slider bindchange="slider1change" left-icon="cancel" right-icon="success_no_circle" show-value  step="1"  min="0" max="8"/></view>
+            <view class="sliderValue">
+                <slider bindchange="slider1change" left-icon="cancel" right-icon="success_no_circle" show-value step="1" min="0" max="8" />
+            </view>
         </view>
         <view class="sliderView">
             <view class="pickerlabel">境内工龄</view>
-            <view class="sliderValue"><slider bindchange="slider1change" left-icon="cancel" right-icon="success_no_circle" show-value  step="1"  min="0" max="8"/></view>
+            <view class="sliderValue">
+                <slider bindchange="slider1change" left-icon="cancel" right-icon="success_no_circle" show-value step="1" min="0" max="8" />
+            </view>
         </view>
-    <picker bindchange="bindcertificatePickerChange" value="{{index}}" range="{{certificate}}" class="picker">
-        <view class="picker">
-            <view class="pickerlabel">学历</view>
-            <view class="picker">：{{certificate[index]}}</view>
-        </view>
-    </picker>
-  <view class="viewResult">
-    <text class="textResult">this is result</text>
+        <picker bindchange="bindcertificatePickerChange" value="{{certificate}}" range="{{certificate}}" class="picker">
+            <view class="picker">
+                <view class="pickerlabel">学历</view>
+                <view class="picker">：{{certificate[index]}}</view>
+            </view>
+        </picker>
+        <view class="pickerlabel">附加分数</view>
+    <checkbox-group bindchange="checkboxChange">
+        <label class="checkbox" wx:for="{{extraPoint}}">
+            <checkbox id='{{item.name}}' value="{{item.value}}" checked="{{item.checked}}" class="checkbox"/>{{item.name}}
+        </label>
+    </checkbox-group>
+    <button type="primary" size="{{primarySize}}" loading="{{loading}}" plain="{{plain}}"
+        disabled="{{disabled}}" bindtap="primary" class="buttonFull">计算分数</button>
+  <view class="viewResult ">
+    <text class="textResult ">{{resultPoint}}</text>
   </view>
 </view>
 
